app/css/main.css
:root {
  --bg-color: #F6F5F2;
  --blue-color: #5A78FD;
  --orange-color: #DF6008;
  --indigo-color: #7C87B6;
  --grey-dark-color: #4A4A4A;
  --grey-medium-color: #C0C0C0;
  --grey-light-color: #F0F0F0;
  --teal-color: #517E7B;
  --yellow-color: #DF8F07;
  --blue-light-color: #93B0FF;
  --orange-light-color: #FFA466;
  --yellow-light-color: #FDCF81;
  --indigo-light-color: #BFC6E7;
  --teal-light-color: #92B7B4;
}

html {
	background-color: var(--bg-color);
	color: var(--grey-dark-color);
	font-family: 'Helvetica', sans-serif;
	font-weight: 400;
  overflow: hidden;
  -webkit-overflow-scrolling: touch;
}

body {
  margin: 0;
  display: flex;
  height: 100vh;
  flex-direction: column;
  overflow-y: hidden;
}

h1 {
	font-family: 'Varela Round', sans-serif;
	font-size: 16px;
	font-weight: 700;
	text-transform: uppercase;
	letter-spacing: 4px;
}

h2 {
	font-family: 'Varela Round', sans-serif;
	font-weight: 700;
	text-transform: uppercase;
}

h4 {
	color: var(--grey-light-color);
	font-weight: 400;
	text-transform: capitalize;
}

label {
	color: var(--grey-medium-color);
	font-size: 12px;
	letter-spacing: 1px;
}

a:link {
	color: inherit;
	text-decoration: none;
}

a:visited {
	color: inherit;
}

a:hover {
  opacity: 0.8;
}

a:active {
   color: inherit;
}

button {
	border: none;
  background: none;
  border-radius: 50%;
  fill: var(--grey-dark-color);
  color: var(--grey-dark-color);
}

.icon {
	height: 48px;
	width: 48px;
	-webkit-transition: 0.3s fill;
	transition: 0.3s fill;
	position: relative;
}

.icon .tooltip {
	opacity: 0;
	visibility: hidden;
	transition: 0.3s opacity 0.2s;
}

.icon:hover .tooltip {
	visibility: visible;
	opacity: 1;
	top: 110%;
	display: inline-block;
	position: absolute;
}

.icon.xsmall {
	height: 24px;
	width: 24px;
}

.icon.small {
	height: 48px;
	width: 48px;
}

.icon.medium {
	height: 64px;
	width: 64px;
}

.icon.large {
	height: 96px;
	width: 96px;
}

.icon.xlarge {
  height: 128px;
  width: 128px;
}

.icon.xxlarge {
  height: 192px;
  width: 192px;
}

.svg-icon-lib {
  border: 0 !important;
  clip: rect(0 0 0 0) !important;
  height: 1px !important;
  margin: -1px !important;
  overflow: hidden !important;
  padding: 0 !important;
  position: absolute !important;
  width: 1px !important;
}

body[category="sight"] .arcs {
  background-color: var(--blue-color);
}

body[category="performance"] .arcs {
  background-color: var(--teal-color);
}

body[category="body"] .arcs {
  background-color: var(--indigo-color);
}

body[category="mind"] .arcs {
  background-color: var(--yellow-color);
}

body[category="imagination"] .arcs {
  background-color: var(--orange-color);
}

body .arcs {
  background-position: 100%;
}

.arcs {
  -webkit-mask-image: url(../images/arcs.svg);
  -webkit-mask-repeat: no-repeat;
  -webkit-mask-size: 100% 80%;
  -webkit-mask-position-x: 50%;
  height: 100vh;
  width: 400px;
  margin: 40px auto;

  background-color: var(--grey-light-color);
  min-height: 100vh;
  transition: 1s background ease;
}

body[data-duo-mode='1'] .arcs {
  -webkit-mask-image: url(../images/duo_arcs.svg);
}

.arcs::after {
  height: 100%;
  width: 1000%;
  width: 50px;
  content: ''; 
  opacity: 0.4;
  display: block;
  z-index: 1;
  position: relative;
  left: 100%;
  background: linear-gradient(90deg, white, #f6f5f200);
}

.arcs.animate::after {
  left: 0;
  transition: 5s left;
}

button {
	outline: none;
  padding: 12px;
  font-size: 14px;
  border-radius: 50px;
  border: 1px solid var(--grey-medium-color);
  margin: 0 8px;
  transition: 0.2s background-color ease, 0.2s transform ease;
}

button:hover {
	opacity: 0.8;
  background-color: var(--grey-light-color);
  transform: scale(1.1)
}

#content {
  max-width: 400px;
  width: calc(80vh - 144px);
  opacity: 1;
  position: fixed;
  text-align: center;
  transition: 0s opacity 0.5s;
  height: calc(80vh - 144px);
  top: 40px;
  left: 0;
  right: 0;
  margin: auto;
  padding: 72px 0;
}

#content > div {
  display: none;
}

#content > div.active {
  display: block;
}

#app {
  opacity: 0;
  transition: 0.5s opacity 1s ease;
}

#app.active {  
  opacity: 1;
}

.hidden {
	display: none;
}

